Front end server ymal ..ansible playbook..error correction

--- a/frontend.yml
+++ b/frontend.yml
@@ -1,6 +1,6 @@
 - name: frontend server
   hosts: all
-  task:
+  tasks:
     - name: nginx server installation
       ansible.builtin.dnf:
           name: nginx
