--- a/frontend.yml
+++ b/frontend.yml
@@ -4,5 +4,10 @@
   tasks:
     - name: nginx server installation
       ansible.builtin.dnf:
-          name: nginx
-          state: latest
+        name: nginx
+        state: latest
+
+    - name: start Nginx
+      ansible.builtin.systemd_service:
+        state:started
+        name:nginx
