--- a/frontend.yml
+++ b/frontend.yml
@@ -7,7 +7,8 @@
         name: nginx
         state: latest
 
-    - name: start Nginx
+    - name: start Nginx 
       ansible.builtin.systemd_service:
-        state:started
-        name:nginx
+
+        state: restarted
+        name: nginx
