--- a/frontend.yml
+++ b/frontend.yml
@@ -13,9 +13,10 @@
         dest: /etc/nginx/default.d/expense.conf
 
     - name: clean up the old content
-      ansible:builtin:file:
+      ansible.builtin.file:
         path: /usr/share/nginx/html
         state: absent
+
 
     - name: create the app directory
       ansible:builtin:file:
