--- a/frontend.yml
+++ b/frontend.yml
@@ -7,6 +7,10 @@
         name: nginx
         state: latest
 
+    - name: copy expense configuration
+      ansible.builtin.copy:
+        src: expense.conf
+        dest: /etc/nginx/default.d/expense.conf
 
 
     - name: start Nginx 
