--- a/frontend.yml
+++ b/frontend.yml
@@ -12,6 +12,11 @@
         src: expense.conf
         dest: /etc/nginx/default.d/expense.conf
 
+    - name: clean up the old content
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: absent
+
 
     - name: start Nginx 
       ansible.builtin.systemd_service:
