front end setup with ansible

--- a/frontend.yml
+++ b/frontend.yml
@@ -17,6 +17,10 @@
         path: /usr/share/nginx/html
         state: absent
 
+    - name: create the app directory
+      ansible:builtin:file:
+        path: /usr/share/nginx/html
+        state: directory
 
     - name: start Nginx 
       ansible.builtin.systemd_service:
