--- a/frontend.yml
+++ b/frontend.yml
@@ -22,6 +22,12 @@
         path: /usr/share/nginx/html
         state: directory
 
+    - name: download and extract app content
+      ansible:builtin:unarchive:
+        src: https://expense-artifacts.s3.amazonaws.com/frontend.zip
+        dest: /usr/share/nginx/html
+        remote_src: yes
+
     - name: start Nginx
       ansible.builtin.systemd_service:
         state: restarted
