--- a/frontend.yml
+++ b/frontend.yml
@@ -22,7 +22,7 @@
         path: /usr/share/nginx/html
         state: directory
 
-    - name: download and extract app content
+    - name: Download and extract the content
       ansible:builtin:unarchive:
         src: https://expense-artifacts.s3.amazonaws.com/expense-frontend-v2.zip
         dest: /usr/share/nginx/html
