--- a/frontend.yml
+++ b/frontend.yml
@@ -17,6 +17,11 @@
         path: /usr/share/nginx/html
         state: absent
 
+    - name: Create directory /usr/share/nginx/html
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: directory
+
     - name: Download and extract the content
       ansible.builtin.unarchive:
         src: https://expense-artifacts.s3.amazonaws.com/expense-frontend-v2.zip   # Path to the source archive file on the target machine
