--- a/var.yml
+++ b/var.yml
@@ -8,6 +8,8 @@
           msg: URL_PLAY ="{{URL_PLAY}}"
 
       - name: print task variable
-        url_task_variable : www.tasl.com
+
         ansible.builtin.debug:
           msg: url_task_variable ="{{url_task_variable}}"
+        vars:
+          url_task_variable: play.task.com
